# CE_Mutation

./: MutationTemplates  README.md
code/: README.txt
code/b747cl_grt_rtw/: b747cl  b747cl.c  b747cl_mut.c  b747cl_private.h  b747cl_types.h  builtin_typeid_types.h  codedescriptor.dmr  compileInfo.mat  modelsources.txt  rtmodel.h  rtw_proj.tmw  tags  zero_crossing_types.h
code/ccpi16a_grt_rtw/: buildInfo.mat  builtin_typeid_types.h  ccpi16a.c  ccpi16a.h  ccpi16a.mk  ccpi16a_private.h  ccpi16a_types.h  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  defines.txt  modelsources.txt  multiword_types.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtmodel.h  rtw_proj.tmw  (+2 more)
code/mutator/: CMakeLists.txt  Makefile  astdump.txt  b747cl.ast  b747cl.c  b747cl.h  b747cl.mk  b747cl_data.c  base_original.mat  buildInfo.mat  build_exception.mat  compileRun.bash  compileRun_ardupilot.bash  compileRun_ccpi16a.bash  compileRun_rctheli.bash  compilemutator.bash  config.txt  config_ardupilot.txt  config_b747cl.txt  config_ccpi16a.txt  config_rct_helico.txt  defines.txt  fileout.txt  lib_base.cpp  mav.parm  mav.tlog  mav.tlog.raw  multiword_types.h  mutator.cpp  mutator_b1.cpp  mutator_base.cpp  output.txt  platform.txt  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_defines.h  rt_nonfinite.c  rt_nonfinite.h  (+11 more)
code/mutator/matlab_scripts/: airspeed_stepchar.m  airspeed_stepchar_scatter.m  altitude_stepchar.m  ccpi16_stepchar.m  ccpi16_stepchar_scatter.m  rcthelico_stepchar_pitchangle.m  rcthelico_stepchar_rollangle.m  rcthelico_stepchar_scatter.m
(+108 files in other folders)
